# xmltodict-fast

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  PLAN_P4.md  PLAN_P6.md  README.md  improvement_map.md  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
benchmarks/: README.md  compare.py  generate_fixtures.py  run.py  run_isolated.py  verify_claims.py
benchmarks/results/: after_p2.json  after_p3.json  after_p4.json  after_p5.json  after_p6.json  after_p7.json  baseline.json  rs_version.json
python/xmltodict/: __init__.py  __init__.pyi  _pure.py
src/: lib.rs  parse.rs  unparse.rs
tests/: test_extended.py
