[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "xmltodict-fast"
version = "1.0.0"
description = "Rust-accelerated XML↔dict library — drop-in replacement for xmltodict"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Martin Blech" },
    { name = "Andrei Voicu Tomuț" },
]
keywords = ["xml", "json", "dict", "xmltodict", "rust", "fast"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: XML",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/voicutomut/xmltodict-fast"
Repository = "https://github.com/voicutomut/xmltodict-fast"
"Original project" = "https://github.com/martinblech/xmltodict"

[tool.maturin]
python-source = "python"
module-name = "xmltodict._xmltodict_rs"
features = ["pyo3/extension-module"]
